removed authors note and chapter numbers from headers

--- a/markdown/005.md
+++ b/markdown/005.md
@@ -1,7 +1,4 @@
-###### J. K. Rowling is staring at you. Can you feel her eyes on you? She’s reading your mind using her Rowling Rays.
-
-# Chapter 5
-## The Fundamental Attribution Error
+# The Fundamental Attribution Error
 
 * * * *
 
