--- a/markdown/006.md
+++ b/markdown/006.md
@@ -1,9 +1,4 @@
-###### Blah blah disclaimer blah blah Rowling blah blah ownership.
-
-A/N: The “Aftermath” section of this chapter is part of the story, *not* omake.
-
-# Chapter 6
-## The Planning Fallacy
+# The Planning Fallacy
 
 * * * *
 
