--- a/markdown/010.md
+++ b/markdown/010.md
@@ -1,15 +1,4 @@
-###### All your base are still belong to Rowling.
-
-* * * * *
-
-> And now you will sit through the Sorting Hat singing its version of Evanescence’s “My Immortal”, which has never happened before.
-
-> just kidding
-
-* * * * *
-
-# Chapter 9
-## Self-Awareness, Part Ⅱ
+# Self-Awareness, Part Ⅱ
 
 …he wondered if the Sorting Hat was genuinely *conscious* in the sense of being aware of its own awareness, and if so, whether it was satisfied with only getting to talk to eleven-year-olds once per year. Its song had implied so: *Oh, I’m the Sorting Hat and I’m okay, I sleep all year and I work one day…*
 
