--- a/markdown/011.md
+++ b/markdown/011.md
@@ -1,9 +1,4 @@
-###### Hail the Dark Lord Rowling.
-
-> “Omake” is a non-canonical extra.
-
-# Chapter 11
-## Omake Files 1, 2, 3
+# Omake Files 1, 2, 3
 
 * * * * *
 
