--- a/markdown/013.md
+++ b/markdown/013.md
@@ -1,9 +1,4 @@
-###### Elen sila J. K. Rowling omentielvo.
-
-> EDIT: Don’t panic. I solemnly swear that there is a logical, foreshadowed, canon-compliant explanation for everything which happens in this chapter. It’s a puzzle, you’re supposed to try to solve it, and if not, just read the next chapter.
-
-# Chapter 13
-## Asking the Wrong Questions
+# Asking the Wrong Questions
 
 * * * * *
 
