--- a/markdown/019.md
+++ b/markdown/019.md
@@ -1,7 +1,4 @@
-###### Blood for the blood god! Skulls for J. K. Rowling!
-
-# Chapter 19
-## Delayed Gratification
+# Delayed Gratification
 
 * * * * *
 
