--- a/markdown/022.md
+++ b/markdown/022.md
@@ -1,7 +1,4 @@
-###### The key to strategy is not to choose *a* path to J. K. Rowling, but to choose so that *all* paths lead to a J. K. Rowling.
-
-# Chapter 22
-## The Scientific Method
+# The Scientific Method
 
 * * * * *
 
