--- a/markdown/023.md
+++ b/markdown/023.md
@@ -1,7 +1,4 @@
-###### Everybody wants a rock to wind a piece of string around J. K. Rowling.
-
-# Chapter 23
-## Belief in Belief
+# Belief in Belief
 
 * * * * *
 
