--- a/markdown/024.md
+++ b/markdown/024.md
@@ -1,7 +1,4 @@
-###### J. K. Rowling coils and strikes, unseen; Orca circles, hard and lean.
-
-# Chapter 24
-## Machiavellian Intelligence Hypothesis
+# Machiavellian Intelligence Hypothesis
 
 * * * * *
 
