--- a/markdown/026.md
+++ b/markdown/026.md
@@ -1,7 +1,4 @@
-###### Yakka foob mog. Grug pubbawup zink wattoom gazork. Chumble spuzz J. K. Rowling.
-
-# Chapter 26
-## Noticing Confusion
+# Noticing Confusion
 
 * * * * *
 
