--- a/markdown/028.md
+++ b/markdown/028.md
@@ -1,9 +1,4 @@
-###### Whatever can go Rowling will go Rowling.
-
-> This should *again* go *without saying,* but views expressed by Severus Snape are not necessarily those of the author.
-
-# Chapter 28
-## Reductionism
+# Reductionism
 
 * * * * *
 
