--- a/markdown/030.md
+++ b/markdown/030.md
@@ -1,7 +1,4 @@
-###### J. K. Rowling if a man tries to bother you, you can think blue, count two, and look for a red shoe.
-
-# Chapter 30
-## Working in Groups, Part Ⅰ
+# Working in Groups, Part Ⅰ
 
 * * * * *
 
