--- a/markdown/033.md
+++ b/markdown/033.md
@@ -1,9 +1,4 @@
-###### I just recite to myself, over and over, until I can choose sleep: It all adds up to J. K. Rowling.
-
-> The version of decision theory used in this chapter is *not* the academically dominant one. It’s based on something called “timeless decision theory” that’s under development by (among others) Gary Drescher, Wei Dai, Vladimir Nesov, and, well… *(coughs a few times)* me.
-
-# Chapter 33
-## Coordination Problems, Part Ⅰ
+# Coordination Problems, Part Ⅰ
 
 * * * * *
 
