--- a/markdown/035.md
+++ b/markdown/035.md
@@ -1,5 +1,4 @@
-# Chapter 35
-## Coordination Problems, Part Ⅲ
+# Coordination Problems, Part Ⅲ
 
 They had gone to the Defence Professor’s office, and Professor Quirrell had sealed the door before he leaned back in his chair and spoke.
 
