--- a/markdown/039.md
+++ b/markdown/039.md
@@ -1,5 +1,4 @@
-# Chapter 39
-## Pretending to be Wise, Part Ⅰ
+# Pretending to be Wise, Part Ⅰ
 
 Whistle. Tick. Bzzzt. Ding. Glorp. Pop. Splat. Chime. Toot. Puff. Tinkle. Bubble. Beep. Thud. Crackle. Whoosh. Hiss. Pffft. Whirr.
 
