--- a/markdown/041.md
+++ b/markdown/041.md
@@ -1,5 +1,4 @@
-# Chapter 41
-## Frontal Override
+# Frontal Override
 
 The biting January wind howled around the vast, blank stone walls that
 demarcated the material bounds of the castle Hogwarts, whispering and
