--- a/markdown/047.md
+++ b/markdown/047.md
@@ -1,5 +1,4 @@
-# Chapter 47
-## Personhood Theory
+# Personhood Theory
 
 There comes a point in every plot where the victim starts to suspect; and looks back, and sees a trail of events all pointing in a single direction. And when that point comes, Father had explained, the prospect of the loss may seem so unbearable, and admitting themselves tricked may seem so humiliating, that the victim will yet deny the plot, and the game may continue long after.
 
