--- a/markdown/048.md
+++ b/markdown/048.md
@@ -1,5 +1,4 @@
-# Chapter 48
-## Utilitarian Priorities
+# Utilitarian Priorities
 
 It was Saturday, the first morning of February, and at the Ravenclaw table, a boy bearing a breakfast plate heaped high with vegetables was nervously inspecting his servings for the slightest trace of meat.
 
