--- a/markdown/049.md
+++ b/markdown/049.md
@@ -1,5 +1,4 @@
-# Chapter 49
-## Prior Information
+# Prior Information
 
 A boy waits at a small clearing at the edge of the non-forbidden forest, beside a dirt trail that runs back to the gates of Hogwarts in one direction, and off into the distance in another. There is a carriage nearby, and the boy is standing well away from it, looking at it, his eyes seldom wavering from its direction.
 
