--- a/markdown/050.md
+++ b/markdown/050.md
@@ -1,5 +1,4 @@
-# Chapter 50
-## Self Centredness
+# Self Centredness
 
 Padma Patil had finished her dinner a little late, getting on toward seven-thirty, and was now striding quickly out of the Great Hall on her way to the Ravenclaw dorm and the study rooms. Gossiping was fun and destroying Granger’s reputation was more fun, but it could distract from schoolwork. She’d put off a six-inch essay on *lomillialor* wood due in next morning’s Herbology class, and she needed to finish it tonight.
 
