--- a/markdown/052.md
+++ b/markdown/052.md
@@ -1,5 +1,4 @@
-# Chapter 52
-## The Stanford Prison Experiment, Part Ⅱ
+# The Stanford Prison Experiment, Part Ⅱ
 
 The adrenaline was already flowing in Harry’s veins, his heart already hammering in his chest, there in that darkened and bankrupt store. Professor Quirrell had finished explaining, and in one hand, Harry held a tiny wooden twig that would be the key. This was it, this was the day and the moment when Harry started acting the part. His first true adventure, a dungeon to be pierced, an evil government to be defied, a maiden in distress to be rescued. Harry should have been more frightened, more reluctant, but instead he felt only that it was time and past time to start becoming the people he had read about in his books; to begin his journey toward what he had always known he was meant to be, a hero. To take the first step on the road that led to Kimball Kinnison and Captain Picard and Liono of Thundera and definitely *not* Raistlin Majere. So far as Harry’s brain knew from watching early morning cartoons, when you grew up you were supposed to gain amazing powers and save the universe, that was what Harry’s brain had seen adults doing and adopted as its role model for the maturation process, and Harry very much wanted to start growing up.
 
