--- a/markdown/053.md
+++ b/markdown/053.md
@@ -1,5 +1,4 @@
-# Chapter 53
-## The Stanford Prison Experiment, Part Ⅲ
+# The Stanford Prison Experiment, Part Ⅲ
 
 The corpse of a woman opened her eyes, and the dull sunken orbs gazed out at nothing.
 
