--- a/markdown/054.md
+++ b/markdown/054.md
@@ -1,5 +1,4 @@
-# Chapter 54
-## The Stanford Prison Experiment, Part Ⅳ
+# The Stanford Prison Experiment, Part Ⅳ
 
 A faint green spark moved forward to set the pace, and behind it followed a brilliant silver figure, all other entities invisible. They had traversed five legs of corridor, turned right five times and gone up five flights of stairs; and when Bellatrix had finished her second bottle of chocolate milk, she had been given solid bars of chocolate to eat.
 
