--- a/markdown/056.md
+++ b/markdown/056.md
@@ -1,6 +1,4 @@
-# Chapter 56
-## The Stanford Prison Experiment, Pt Ⅵ
-### Constrained Optimisation
+# The Stanford Prison Experiment, Constrained Optimisation, Pt Ⅵ
 
 Silent, it was thankfully silent, the metal door on the next level down. Either there wasn’t someone behind there, or they were hurting quietly, maybe they were screaming but their voice had given out already, or they were just muttering quietly to themselves in the dark…
 
