--- a/markdown/057.md
+++ b/markdown/057.md
@@ -1,6 +1,4 @@
-# Chapter 57
-## The Stanford Prison Experiment, Part Ⅶ
-### Constrained Cognition
+# The Stanford Prison Experiment, Constrained Cognition, Part Ⅶ
 
 Harry had *hoped* that he’d just achieved fusion with his mysterious dark side and would be enabled to draw on all of its benefits with none of its drawbacks, call up the crystal clarity and indomitable will on demand, without needing to go cold or angry.
 
