--- a/markdown/058.md
+++ b/markdown/058.md
@@ -1,11 +1,4 @@
-> A/N: A movie trailer for *Army of Darkness,* resembling the one Harry saw, is THV1KkPXIxQ on YouTube.
-
-> The key quote is as follows, spoken by a man of modern times to listeners from the Middle Ages:
-
-> “All right you primitive screwheads! Listen up! You see this? This… is my *boomstick!”*
-
-# Chapter 58
-## The Stanford Prison Experiment, Part Ⅷ
+# The Stanford Prison Experiment, Part Ⅷ
 
 * * * * *
 
