--- a/markdown/059.md
+++ b/markdown/059.md
@@ -1,6 +1,4 @@
-# Chapter 59
-## The Stanford Prison Experiment, Part Ⅸ
-### Constrained Cognition
+# The Stanford Prison Experiment, Constrained Cognition, Part Ⅸ
 
 Broomsticks had been invented during what a Muggle would have called the Dark Ages, supposedly by a legendary witch named Celestria Relevo, allegedly the great-great-granddaughter of Merlin.
 
