--- a/markdown/063.md
+++ b/markdown/063.md
@@ -1,5 +1,4 @@
-# Chapter 63
-## The Stanford Prison Experiment, Aftermaths
+# The Stanford Prison Experiment, Aftermaths
 
 *Aftermath, Hermione Granger:*
 
