--- a/markdown/065.md
+++ b/markdown/065.md
@@ -1,5 +1,4 @@
-# Chapter 65
-## Contagious Lies
+# Contagious Lies
 
 Hermione Granger had read somewhere once, that one of the keys to staying thin was to pay attention to the food you ate, to notice yourself eating it, so that you were satisfied with the meal. This morning she’d made herself toast, and put butter on the toast, and cinnamon on the butter, and it really should’ve been enough to get her to *notice,* this time, the goodness that was in front of her…
 
