--- a/markdown/067.md
+++ b/markdown/067.md
@@ -1,5 +1,4 @@
-# Chapter 67
-## Self Actualisation, Part Ⅱ
+# Self Actualisation, Part Ⅱ
 
 In the high reaches of Hogwarts where rooms and corridors changed on a daily basis, where the territory itself was uncertain and not just the map, where the stability of the castle began to fray into dreams and chaos without changing its architectural style or apparent solidity—in the high reaches of Hogwarts, a battle would soon be fought.
 
