--- a/markdown/068.md
+++ b/markdown/068.md
@@ -1,5 +1,4 @@
-# Chapter 68
-## Self Actualisation, Part Ⅲ
+# Self Actualisation, Part Ⅲ
 
 Hermione wasn’t feeling very nice right now, or Good either, there was a hot ball of anger burning inside her and she wondered if this was something like Harry’s darkness (though it probably wasn’t even close) and she shouldn’t have felt that way over some silly little game but—
 
