--- a/markdown/069.md
+++ b/markdown/069.md
@@ -1,5 +1,4 @@
-# Chapter 69
-## Self Actualisation, Part Ⅳ
+# Self Actualisation, Part Ⅳ
 
 
 It was out of the corner of her eye that Hermione Granger saw it, a reflection on the polished metal of a statue at the junction of two corridors, a flash of gold, a flash of red, something like an image of fire; just for a moment she saw it, and then it was gone.
