--- a/markdown/070.md
+++ b/markdown/070.md
@@ -1,5 +1,4 @@
-# Chapter 70
-## Self Actualization, Part Ⅴ
+# Self Actualization, Part Ⅴ
 
 Even if you had been the Deputy Headmistress for three decades, and a Transfiguration Professor before that, it was rare that you saw Albus Dumbledore caught completely flatfooted.
 
