--- a/markdown/073.md
+++ b/markdown/073.md
@@ -1,6 +1,4 @@
-# Chapter 73
-## Self Actualisation, Part Ⅷ
-### The Sacred and the Mundane
+# Self Actualisation, The Sacred and the Mundane, Part Ⅷ
 
 *The red jet of fire took Hannah full in the face, flipping her end-over-heels and smacking her head straight into the stone wall, where her pale face seemed to linger for an instant, framed by flying strands of brown-golden hair, before she collapsed to the ground in a heap of robes, as the third and final volley of blazing green spirals brought down their foe’s Shield Charm.*
 
