--- a/markdown/074.md
+++ b/markdown/074.md
@@ -1,6 +1,4 @@
-# Chapter 74
-## Self Actualisation, Part Ⅸ
-### Escalation of Conflicts
+# Self Actualisation, Escalation of Conflicts, Part Ⅸ
 
 Harry walked forward a step, then another step, until a sense of unease began to pervade him, a disquiet in his nerves.
 
