--- a/markdown/075.md
+++ b/markdown/075.md
@@ -1,6 +1,4 @@
-# Chapter 75
-## Self Actualisation Final
-### Responsibility
+# Self Actualisation Final, Responsibility
 
 It was a looping, meandering alley in the midst of Hogwarts, wandering like a stray lock of hair; sometimes crossing itself, it seemed, but you couldn’t ever get to the end if you gave into the temptation of apparent shortcuts.
 
