--- a/markdown/076.md
+++ b/markdown/076.md
@@ -1,5 +1,4 @@
-# Chapter 76
-## Interlude with the Confessor
+# Interlude with the Confessor
 
 Rianne Felthorne descended the stairs of roughened stone and crude mortar, keeping a *Lumos* lit through the distances between fire-sconces, holding aloft her wand through the gaps from light to light.
 
