--- a/markdown/077.md
+++ b/markdown/077.md
@@ -1,6 +1,4 @@
-# Chapter 77
-## Self Actualisation Aftermaths
-### Surface Appearances
+# Self Actualisation: Aftermaths, Surface Appearances
 
 *Aftermath: Albus Dumbledore and—*
 
