--- a/markdown/078.md
+++ b/markdown/078.md
@@ -1,6 +1,4 @@
-# Chapter 78
-## Taboo Tradeoffs Prelude
-### Cheating
+# Taboo Tradeoffs Prelude: Cheating
 
 It was Saturday, on the 4th of April, in the year 1992.
 
