--- a/markdown/079.md
+++ b/markdown/079.md
@@ -1,5 +1,4 @@
-# Chapter 79
-## Taboo Tradeoffs, Part Ⅰ
+# Taboo Tradeoffs, Part Ⅰ
 
 *“Hermione Granger,” Auror Komodo said in a toneless voice, “you are under arrest for the attempted murder of Draco Malfoy.”*
 
