--- a/markdown/080.md
+++ b/markdown/080.md
@@ -1,6 +1,4 @@
-# Chapter 80
-## Taboo Tradeoffs, Part Ⅱ
-### The Horns Effect
+# Taboo Tradeoffs, Part Ⅱ, The Horns Effect
 
 The Most Ancient Hall of the Wizengamot is cool and dark, with concentric half-circles of stone rising up from the lowest centre, and simple wooden benches set down upon those elevated half-circles. There is no source of light, but the chamber is well-lit, without any apparent cause or reason; it is simply a brute fact that the hall is well-lit. The walls like the floor are stone, dark stone, some elegant and mysterious conjugation of rock most fine to gaze upon, with a smooth texture that seems to flow and shift beneath its surface. This is the Most Ancient Hall, the oldest place of wizardry that has lasted into the modern day; every other place of power was destroyed in one war or another. This is the Hall of the Wizengamot, which is most ancient because the wars ended with the building of this place.
 
