--- a/markdown/081.md
+++ b/markdown/081.md
@@ -1,5 +1,4 @@
-# Chapter 81
-## Taboo Tradeoffs, Part Ⅲ
+# Taboo Tradeoffs, Part Ⅲ
 
 In rising half-circles of dark stone, a great sea of upraised hands.
 
