--- a/markdown/082.md
+++ b/markdown/082.md
@@ -1,5 +1,4 @@
-# Chapter 82
-## Taboo Tradeoffs, Final
+# Taboo Tradeoffs, Final
 
 Phoenix travel was a sensation entirely unlike Apparition or portkeys. You caught on fire—you definitely felt yourself catching on fire, even though there was no pain—and instead of burning to ashes, the fire burned all the way through you and you *became* fire, and then you went out in one place and blazed up in another. It didn’t sicken the stomach like portkeys or Apparition, but it was a rather unnerving experience nonetheless. If the underlying truth of phoenix travel really was becoming a specific instantiation of a more general Fire, then that seemed to hint you could potentially burn *anywhere—* even in the distant past, or in another universe, or in two places at once. You might go out in one place and blaze up in a hundred others, and the you who arrived at Hogwarts would never know the difference. Though Harry had read what he could about phoenixes, trying to figure out how to get one of his own, and there’d been no hint of anything remotely like *that* capability.
 
