--- a/markdown/083.md
+++ b/markdown/083.md
@@ -1,5 +1,4 @@
-# Chapter 82
-## Taboo Tradeoffs, Aftermath Ⅰ
+# Taboo Tradeoffs, Aftermath Ⅰ
 
 When Padma entered the Transfiguration classroom, she saw that half the class had beaten her there, a strange, deathly silence pervading the room. Harry Potter sat alone in one corner, staring off into some unknown distance, his eyes half-lidded, nearly closed.
 
