--- a/markdown/084.md
+++ b/markdown/084.md
@@ -1,5 +1,4 @@
-# Chapter 84
-## Taboo Tradeoffs, Aftermath Ⅱ
+# Taboo Tradeoffs, Aftermath Ⅱ
 
 When Hermione Granger woke, she found herself lying in a soft, comfortable bed of the Hogwarts infirmary, with a square of setting sunlight falling on her midriff, warm through the thin blanket. Memory said that there would be a screen-sheet above her, either drawn around her bed or open, and that the rest of Madam Pomfrey’s domain would lie beyond: the other beds, occupied or unoccupied, and bright windows set in the curvily-carven stone of Hogwarts.
 
