--- a/markdown/085.md
+++ b/markdown/085.md
@@ -1,8 +1,4 @@
-> This chapter received a major, significant revision on December 16th, 2012. The main revision starts about halfway through—search on the word “trivial” to find it.
-
-# Chapter 85
-## Taboo Tradeoffs, Aftermath Ⅲ
-### Distance
+# Taboo Tradeoffs, Aftermath Ⅲ, Distance
 
 * * * * *
 
