--- a/markdown/003.md
+++ b/markdown/003.md
@@ -1,7 +1,4 @@
-###### If J. K. Rowling asks you about this story, you know nothing.
-
-# Chapter 3
-## Comparing Reality To Its Alternatives
+# Comparing Reality To Its Alternatives
 
 --------
 
