--- a/markdown/009.md
+++ b/markdown/009.md
@@ -1,11 +1,4 @@
-###### All your base are belong to J. K. Rowling.
-
-* * * * *
-
-> When Part Ⅰ of this chapter was first posted, I said that if anyone guessed what the last sentence was talking about before the next update, I would tell them the entire rest of the plot.
-
-# Chapter 9
-## Title Redacted, Part Ⅰ
+# Title Redacted, Part Ⅰ
 
 * * * * *
 
