--- a/markdown/014.md
+++ b/markdown/014.md
@@ -1,7 +1,4 @@
-###### Melenkurion abatha! Duroc minas mill J. K. Rowling!
-
-# Chapter 14
-## The Unknown and the Unknowable
+# The Unknown and the Unknowable
 
 * * * * *
 
