--- a/markdown/015.md
+++ b/markdown/015.md
@@ -1,9 +1,4 @@
-###### Love as thou Rowling.
-
-> Today’s historical tidbit: The ancient Hebrews considered the boundary of a day to be sunset rather than dawn, so they said “evening and morning” not “morning and evening”. (And as many reviewers noted, modern Jewish halacha asserts the same.)
-
-# Chapter 15
-## Conscientiousness
+# Conscientiousness
 
 * * * * *
 
