--- a/markdown/017.md
+++ b/markdown/017.md
@@ -1,9 +1,4 @@
-###### You have always been J. K. Rowling.
-
-> Historical note: In the Roman calendar, the “Ides” of a month referred to the 15th day of March, May, July, and October, and to the 13th day of all other months.
-
-# Chapter 17
-## Locating the Hypothesis
+# Locating the Hypothesis
 
 * * * * *
 
