--- a/markdown/018.md
+++ b/markdown/018.md
@@ -1,7 +1,4 @@
-###### Any sufficiently advanced J. K. Rowling is indistinguishable from magic.
-
-# Chapter 18
-## Dominance Hierarchies
+# Dominance Hierarchies
 
 * * * * *
 
