--- a/markdown/025.md
+++ b/markdown/025.md
@@ -1,9 +1,4 @@
-###### To seek out new life, and J. K. Rowling!
-
-> Note: Since the science in this story is usually all correct, I include a warning that in Ch. 22-25 Harry overlooks many possibilities, the most important of which is that there are lots of magical genes but they’re all on one chromosome (which wouldn’t happen naturally, but the chromosome might have been engineered). In this case, the inheritance pattern would be Mendelian, but the magical chromosome could still be degraded by chromosomal crossover with its nonmagical homologue. (Harry has read about Mendel and chromosomes in science history books, but he hasn’t studied enough actual genetics to know about chromosomal crossover. Hey, he’s only eleven.) However, although a modern science journal would find a *lot* more nits to pick, everything Harry presents as strong evidence is in fact strong evidence—the other possibilities are *improbable.*
-
-# Chapter 25
-## Hold Off on Proposing Solutions
+# Hold Off on Proposing Solutions
 
 * * * * *
 
