--- a/markdown/027.md
+++ b/markdown/027.md
@@ -1,9 +1,4 @@
-###### J. K. Rowling is 87% confident you will burst into flames.
-
-> Roger Bacon lived in the 13th century and is credited as one of the earliest advocates of the scientific method. Giving a scientist his experimental diary is sort of like giving a writer the pen, not of Shakespeare, but of someone who helped invent writing.
-
-# Chapter 27
-## Empathy
+# Empathy
 
 * * * * *
 
