--- a/markdown/032.md
+++ b/markdown/032.md
@@ -1,5 +1,4 @@
-# Chapter 32
-## Interlude: Personal Financial Management
+# Interlude: Personal Financial Management
 
 “But Headmaster,” Harry argued, some of his desperation leaking into his voice, “leaving all of my assets in one undiversified vault full of gold coins—it’s crazy, Headmaster! It’s like, I don’t know, doing Transfiguration experiments without consulting a recognised authority! You just don’t do that with money!”
 
