--- a/markdown/034.md
+++ b/markdown/034.md
@@ -1,5 +1,4 @@
-# Chapter 34
-## Coordination Problems, Part Ⅱ
+# Coordination Problems, Part Ⅱ
 
 Minerva and Dumbledore together had applied their combined talent to conjure the grand stage toward which Quirrell now slowly trudged; it was, at its core, sturdy wood, but the outer surfaces shone with glitter of marble inlaid with platinum and studded with gems of every House colour. Neither she nor the Headmaster was any Founder of Hogwarts, but the conjuration only needed to last a few hours. Minerva ordinarily enjoyed the few occasions when she had the occasion to tire herself out on large Transfigurations; she should have enjoyed the many small chances for artistry, and the illusion of opulence; but this time she had done the work with the dreadful feeling of digging her own grave.
 
