--- a/markdown/036.md
+++ b/markdown/036.md
@@ -1,5 +1,4 @@
-# Chapter 36
-## Status Differentials
+# Status Differentials
 
 Wrenching disorientation, that was how it felt to walk out of Platform Nine and Three-Quarters into the rest of Earth, the world that Harry had once thought was the only real world. People dressed in casual shirts and pants, instead of the more dignified robes of wizards and witches. Scattered bits of trash here and there around the benches. A forgotten smell, the fumes of burned gasoline, raw and sharp in the air. The ambiance of the King’s Cross train station, less bright and cheerful than Hogwarts or Diagon Alley; the people seemed smaller, more afraid, and likely would have eagerly traded their problems for a dark wizard to fight. Harry wanted to cast *Scourgify* for the dirt, and *Everto* for the garbage, and if he’d known the spell, a Bubble-Head Charm so he wouldn’t have to breathe the air. But he couldn’t use his wand, in this place…
 
