--- a/markdown/055.md
+++ b/markdown/055.md
@@ -1,5 +1,4 @@
-# Chapter 55
-## The Stanford Prison Experiment, Part Ⅴ
+# The Stanford Prison Experiment, Part Ⅴ
 
 In a scarred and ruined corridor, lit by dim gas lights, a boy slowly crept forward, one hand stretched out, toward the unmoving snake that was the body of his teacher.
 
