--- a/markdown/071.md
+++ b/markdown/071.md
@@ -1,5 +1,4 @@
-# Chapter 71
-## Self Actualisation, Part Ⅵ
+# Self Actualisation, Part Ⅵ
 
 “Well,” Daphne whispered, keeping her voice as low as she could, “at
 least now I don’t feel like the only sane person in Hogwarts any more.”
