--- a/markdown/072.md
+++ b/markdown/072.md
@@ -1,6 +1,4 @@
-# Chapter 72
-## Self Actualisation, Part Ⅶ
-### Plausible Deniability
+# Self Actualisation, Plausible Deniability, Part Ⅶ
 
 The winter Sun had well set by the time dinner ended, and so it was amid the peaceful light of stars twinkling down from the enchanted ceiling of the Great Hall that Hermione left for the Ravenclaw Tower alongside her study partner Harry Potter, who lately seemed to have a *ridiculous* amount of time for studying. She hadn’t the faintest idea of when Harry was doing his actual homework, except that it was getting done, maybe by house elves while he slept.
 
