fixed heading of chapter 61 - changed from section to chapter

--- a/latex/061.tex
+++ b/latex/061.tex
@@ -1,4 +1,4 @@
-\section{The Stanford Prison Experiment, Secrecy and Openness, Part Ⅺ}
+\chapter{The Stanford Prison Experiment, Secrecy and Openness, Part Ⅺ}
 
 Through green flame they whirled, through the Floo network they spun,
 Minerva's heart racing with a pounding horror that she hadn't felt in
