--- a/markdown/061.md
+++ b/markdown/061.md
@@ -1,4 +1,4 @@
-## The Stanford Prison Experiment, Secrecy and Openness, Part Ⅺ
+# The Stanford Prison Experiment, Secrecy and Openness, Part Ⅺ
 
 Through green flame they whirled, through the Floo network they spun, Minerva’s heart racing with a pounding horror that she hadn’t felt in ten years and three months, the corridors between space coughed and spit them out into the lobby of Gringotts (the safest Floo receiver in Diagon Alley, the connection most difficult to intercept, the fastest way out of Hogwarts without a phoenix). A goblin attendant turned toward them, his eyes widened, he began a slightly respectful bow—
 
