latex justification set to be more lax

--- a/templates/latex/classic/classic.sty
+++ b/templates/latex/classic/classic.sty
@@ -15,6 +15,7 @@
 \frenchspacing
 \chapterstyle{dash}
 \pagestyle{Ruled}
+\midsloppy
 
 % remove one inch padding from margins
 \setlength{\textheight}{\paperheight-\topmargin-\headheight-\headsep-\footskip-\topmargin}
