--- a/templates/latex/hpotter/hpotter.sty
+++ b/templates/latex/hpotter/hpotter.sty
@@ -152,6 +152,7 @@
 \frenchspacing
 \chapterstyle{harrypotterchapter}
 \pagestyle{harrypotterpage}
+\midsloppy
 
 % remove one inch padding from margins
 \setlength{\textheight}{\paperheight-\topmargin-\headheight-\headsep-\footskip-1.5\topmargin}
