tweaked documentation in latex template

--- a/templates/latex/hpmor.tex
+++ b/templates/latex/hpmor.tex
@@ -1,5 +1,5 @@
 % jinja2 latex template
-% slightly modified jinja2 syntax is used
+% slightly modified jinja2 syntax is used to accommodate latex syntax
 
 \documentclass[((( font_size|escape_tex )))pt,((( paper_size|escape_tex ))),((( paper_sides|escape_tex )))]{memoir}
 % style_class is the name of the style to use
